# cvcamera

app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/opencv3/com/cvcamera/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: DetectionBasedTracker_jni.cpp  DetectionBasedTracker_jni.h  native-lib.cpp
app/src/main/java/opencv3/com/cvcamera/: DetectionBasedTracker.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/opencv3/com/cvcamera/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
